--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,21 @@
+certifi==2018.4.16
+chardet==3.0.4
+defusedxml==0.5.0
+dj-database-url==0.5.0
+Django==2.0.5
 django-extensions==2.0.7
-psycopg2-binary==2.7.4
-pyreadline==2.1
+idna==2.7
+oauthlib==2.1.0
+Pillow==5.2.0
+psycopg2==2.7.5
+PyJWT==1.6.4
+python-social-auth==0.3.6
+python3-openid==3.1.0
+pytz==2018.5
+requests==2.19.1
+requests-oauthlib==1.0.0
 six==1.11.0
-typing==3.6.4
-psycopg2==2.7.4
+social-auth-app-django==2.1.0
+social-auth-core==1.7.0
+urllib3==1.23
+whitenoise==3.3.1
