--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ defusedxml==0.5.0
 dj-database-url==0.5.0
 Django==2.0.5
 django-extensions==2.0.7
+gunicorn==19.9.0
 idna==2.7
 oauthlib==2.1.0
 Pillow==5.2.0
